--- a/src/App.module.css
+++ b/src/App.module.css
@@ -31,9 +31,7 @@ footer {
   width: 100%;
   color: #f5f5f5;
   text-align: center;
-  word-spacing: 2px;
   font-family: Arial, Helvetica, sans-serif;
-  font-weight: 100;
   margin-top: 30px;
 }
 
@@ -49,7 +47,7 @@ a {
     margin: 0 10%;
   }
   footer {
-    padding: 0% 12.5%;
+    width: 200%;
   }
   h1 {
     padding-top: 50px;
