--- a/src/App.module.css
+++ b/src/App.module.css
@@ -26,10 +26,9 @@ h1 {
 }
 
 footer {
-  overflow: hidden;
+  overflow-x: hidden;
   background-color: #222831;
-  bottom: 0;
-  width: 100%;
+  width: 100vw;
   color: #f5f5f5;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
@@ -46,9 +45,6 @@ a {
 @media only screen and (max-width: 770px) {
   .container {
     margin: 0 10%;
-  }
-  footer {
-    width: 200%;
   }
   h1 {
     padding-top: 50px;
