--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,10 +1,17 @@
+@import url("https://fonts.googleapis.com/css?family=Nunito:400,600,700");
+
+html {
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+  outline: none;
+}
+
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   background-color: #f5f5f5;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  overflow-x: hidden;
+  font-family: "Nunito", sans-serif;
 }
 
 /* hide scrollbar */
@@ -18,11 +25,51 @@ body {
   flex-direction: column;
 }
 
+.header {
+  height: 100vh;
+}
+
+.logo {
+  margin-top: 20%;
+  width: auto;
+  height: auto;
+}
+
 h1 {
   text-align: center;
   font-weight: bolder;
   padding-top: 50px;
   color: #222831;
+}
+
+button {
+  font-size: 20px;
+  font-weight: 600;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  padding: 8px 50px;
+  box-shadow: 5px 5px 10px grey, -5px -5px 10px #fff;
+  color: white;
+  background-image: linear-gradient(
+    90deg,
+    #00c0ff 0%,
+    #ffcf00 49%,
+    #fc4f4f 80%,
+    #00c0ff 100%
+  );
+  animation: slidebg 5s linear infinite;
+}
+
+@keyframes slidebg {
+  to {
+    background-position: 40vw;
+  }
+}
+
+a {
+  text-decoration: none;
+  font-weight: 700;
 }
 
 footer {
@@ -31,13 +78,7 @@ footer {
   width: 100vw;
   color: #f5f5f5;
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
   margin-top: 30px;
-}
-
-a {
-  text-decoration: none;
-  font-weight: 600;
 }
 
 /****** Media Queries ******/
@@ -49,5 +90,9 @@ a {
   h1 {
     padding-top: 50px;
     font-size: 26px;
+  }
+  .logo {
+    width: 100%;
+    height: 100%;
   }
 }
