--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -8,34 +8,11 @@
 .card {
   margin: 0 2% !important;
   border-radius: 15px;
-  -webkit-box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.1), -5px -5px 10px #fff;
-  -moz-box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.1), -5px -5px 10px #fff;
-  box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.1), -5px -5px 10px #fff;
-
-  animation: flip 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0.5s both;
-}
-@keyframes flip {
-  0% {
-    transform: rotate3d(1, 1, 0, 0deg);
-  }
-  25% {
-    transform: rotate3d(1, 1, 0, 90deg);
-  }
-  50% {
-    transform: rotate3d(1, 1, 0, 180deg);
-  }
-  75% {
-    transform: rotate3d(1, 1, 0, 270deg);
-  }
-  100% {
-    transform: rotate3d(1, 1, 0, 360deg);
-  }
+  box-shadow: 5px 5px 10px grey, -5px -5px 10px #fff;
 }
 
 .card:hover {
-  -webkit-box-shadow: 15px 15px 20px rgb(0, 0, 0, 0.1), -15px -15px 20px #fff;
-  -moz-box-shadow: 15px 15px 20px rgb(0, 0, 0, 0.1), -15px -15px 20px #fff;
-  box-shadow: 15px 15px 20px rgb(0, 0, 0, 0.1), -15px -15px 20px #fff;
+  box-shadow: 15px 15px 20px grey, -15px -15px 20px #fff;
 }
 
 .infected {
