--- a/src/components/Chart/Chart.module.css
+++ b/src/components/Chart/Chart.module.css
@@ -5,14 +5,10 @@
   border-radius: 15px;
   background-color: white;
   margin-bottom: 20px;
-  -webkit-box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.1), -5px -5px 10px #fff;
-  -moz-box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.1), -5px -5px 10px #fff;
-  box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.1), -5px -5px 10px #fff;
+  box-shadow: 5px 5px 10px grey, -5px -5px 10px #fff;
 }
 .container:hover {
-  -webkit-box-shadow: 15px 15px 20px rgb(0, 0, 0, 0.1), -15px -15px 20px #fff;
-  -moz-box-shadow: 15px 15px 20px rgb(0, 0, 0, 0.1), -15px -15px 20px #fff;
-  box-shadow: 15px 15px 20px rgb(0, 0, 0, 0.1), -15px -15px 20px #fff;
+  box-shadow: 15px 15px 20px grey, -15px -15px 20px #fff;
 }
 
 @media only screen and (max-width: 770px) {
