--- a/src/components/Tile/Tile.module.css
+++ b/src/components/Tile/Tile.module.css
@@ -7,17 +7,13 @@
 
 .card {
   margin: 0 2% !important;
-  border-left: 10px solid #222831;
-  border-right: 10px solid #222831;
+  border-left: 10px solid #f13043;
+  border-right: 10px solid #f13043;
   border-radius: 15px;
-  -webkit-box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.1), -5px -5px 10px #fff;
-  -moz-box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.1), -5px -5px 10px #fff;
-  box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.1), -5px -5px 10px #fff;
+  box-shadow: 5px 5px 10px grey, -5px -5px 10px #fff;
 }
 .card:hover {
-  -webkit-box-shadow: 15px 15px 20px rgb(0, 0, 0, 0.1), -15px -15px 20px #fff;
-  -moz-box-shadow: 15px 15px 20px rgb(0, 0, 0, 0.1), -15px -15px 20px #fff;
-  box-shadow: 15px 15px 20px rgb(0, 0, 0, 0.1), -15px -15px 20px #fff;
+  box-shadow: 15px 15px 20px grey, -15px -15px 20px #fff;
 }
 
 @media only screen and (max-width: 770px) {
