hover active focus 👀

--- a/src/components/Chart/Chart.module.css
+++ b/src/components/Chart/Chart.module.css
@@ -7,7 +7,9 @@
   margin-bottom: 20px;
   box-shadow: 5px 5px 10px grey, -5px -5px 10px #fff;
 }
-.container:hover {
+.container:hover,
+.container:active,
+.container:focus {
   box-shadow: 15px 15px 20px grey, -15px -15px 20px #fff;
 }
 
