--- a/src/components/Tile/Tile.module.css
+++ b/src/components/Tile/Tile.module.css
@@ -12,7 +12,9 @@
   border-radius: 15px;
   box-shadow: 5px 5px 10px grey, -5px -5px 10px #fff;
 }
-.card:hover {
+.card:hover,
+.card:active,
+.card:focus {
   box-shadow: 15px 15px 20px grey, -15px -15px 20px #fff;
 }
 
