--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -11,7 +11,9 @@
   box-shadow: 5px 5px 10px grey, -5px -5px 10px #fff;
 }
 
-.card:hover {
+.card:hover,
+.card:active,
+.card:focus {
   box-shadow: 15px 15px 20px grey, -15px -15px 20px #fff;
 }
 
